# Intermediate_generator

./: LICENSE  README.md  environment.yml  fingerprint.py  scoring.py  setup.cfg  setup.py  setup_backup.cfg
.ipynb_checkpoints/: intermediates-checkpoint.ipynb
R-group/: R-group.ipynb  R-group_deconstructor.ipynb  old_copy_selfies_intermediate_generator.ipynb  vis.py
R-group/images_test/: intermediate_bace_combination_02_biphenyl~03_biphenyl.sdf  intermediate_bace_combination_03_biphenyl~04_biphenyl.sdf  intermediate_cdk8_13~14.sdf  intermediate_cdk8_15~13.sdf  intermediate_tyk2_lig_ejm_31~lig_ejm_42.sdf  intermediate_tyk2_lig_ejm_31~lig_ejm_44.sdf  intermediate_tyk2_lig_ejm_31~lig_ejm_48.sdf  intermediate_tyk2_lig_ejm_31~lig_jmc_27.sdf  intermediate_tyk2_lig_ejm_42~lig_ejm_43.sdf  intermediate_tyk2_lig_ejm_42~lig_ejm_44.sdf  intermediate_tyk2_lig_ejm_42~lig_ejm_48.sdf  intermediate_tyk2_lig_ejm_42~lig_ejm_49.sdf  intermediate_tyk2_lig_ejm_42~lig_jmc_28.sdf  intermediate_tyk2_lig_ejm_45~lig_ejm_49.sdf  intermediate_tyk2_lig_jmc_30~lig_ejm_44.sdf  intermediate_tyk2_lig_jmc_30~lig_ejm_47.sdf
data/BACE_ligands_intermediates/: bace_04_aligned_to_06.sdf  bace_ligands_and_intermediates_2d.sdf  intermediate_02_biphenyl~11_spirocycles.sdf  intermediate_02_biphenyl~32_spirocycles.sdf  intermediate_02_biphenyl~74_amide_series.sdf  intermediate_03_biphenyl~16_spirocycles.sdf  (+15 more)
dist_old/: intermediate_generator-0.0.1-py3-none-any.whl
generator/: cli.py  filters.py  fingerprint.py  generation.py  intermediates.py  intermediates_package.py  scoring.py  visualization.py
(+169 files in other folders)
