[metadata]
name = intermediate_generator
version = 0.0.1
author = Daan Jiskoot
author_email = djiskoot@vuw.leidenuniv.nl
description = A molecular intermediate generator for relative binding free energy calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daanjiskoot/Intermediate_generator    Intended Audience :: Science/Research
classifiers =
    Topic :: Scientific/Engineering :: Chemistry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.install_requires]
numpy
pandas

[options.packages.find]
where = generator

